# vema

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  matrix.rs  test_util.rs  vector.rs
