[package]
name = "vema"
version = "0.1.1"
edition = "2024"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/d-e-s-o/vema.git"
documentation = "https://docs.rs/vema"
categories = [
  "algorithms",
  "game-development",
  "mathematics",
  "science",
]
keywords = [
  "algebra",
  "linear",
  "math",
  "matrix",
  "vector",
]
description = """
Vector and Matrix types and associated operations.
"""

[features]
default = []

# Below here are dev-mostly features that should not be needed by
# regular users.

# Enable code paths requiring a nightly toolchain. This feature is only meant to
# be used for testing and benchmarking purposes, not for the core library, which
# is expected to work on stable.
nightly = []

[dev-dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
